--- a/index.html
+++ b/index.html
@@ -67,16 +67,27 @@ I have also done some work in my internship at Dept. of Algorithm,
 <p><strong>New:</strong> Actively seeking for internship in development. Feel free to contact me!</p>
 
 
-<h2 id="service">DCD</h2>
+
+
+<h2>Research Assistant, DCD Lab</h2>
 <ul>
-<li><strong>xxxx:</strong> xxxxxxx</li>
+<li>Built <a href="http://zcy.ckcest.cn/tcm/qaos/home">website</a> about traditional Chinese medicine, which includes question answering system about medical treatment and exhibition of relationship between medicine and disease. <br><strong>[Spring MyBatis MySQL Echarts]</strong></li>
+<li>Constructed and maintained a knowledge graph about Chinese-medicine/disease and used it in QA system.<br><strong>[Keras Tensorflow Named-Entity-Recognition Text-classify]</strong></li>
 </ul>
 
-<h2 id="teaching">Yiwise</h2>
+<h2>Intern, Yiwise.ai</h2>
 <ul>
-<li>xxx</li>
-<li>xxx</li>
+<li>Studied most recent papers, did some analysis and implemented some of the models</li>
+<li>Made classifier to distinguish sentence intents using neural network like BERT, DCNN, TextCNN</li>
+<li>built crawlers to download enterprise-level information from Zhihu, Baidu, etc.</li>
 </ul>
+
+<h2>Research Assistant, EMNets Lab</h2>
+<ul>
+<li>Designed and implemented an application running on Android smart watch to move furniture using hand gestures. It collected data from gyroscope and accelerometer and used complementary filter to determine the direction of hand and used neural network to distinguish orders.<br><strong>[Android Raspberry]</strong></li>
+</ul>
+
+<h2>To see more project, please visit my <a href="https://github.com/heard1">github</a>. </h2>
 
 </main>
 
@@ -108,7 +119,7 @@ I have also done some work in my internship at Dept. of Algorithm,
 				<li class="widget__item"><b>[04/2019]</b> Joined Yiwise.ai agorithm department as an intern.
 </li>
 				
-				<li class="widget__item"><b>[03/2019]</b> Was awarded third-class academic scholarship.
+				<li class="widget__item"><b>[03/2019]</b> Was awarded third-class academic scholarship of ZJU.
 </li>
 				
 				<li class="widget__item"><b>[09/2018]</b> Got third prize of Alibaba IoT competition (GXIC) in intelligent Furniture.
