correct some words

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I have also done some work in my internship at Dept. of Algorithm,
 <h2>Research Assistant, DCD Lab</h2>
 <ul>
 <li>Built <a href="http://zcy.ckcest.cn/tcm/qaos/home">website</a> about traditional Chinese medicine, which includes question answering system about medical treatment and exhibition of relationship between medicine and disease. <br><strong>[Spring MyBatis MySQL Echarts]</strong></li>
-<li>Constructed and maintained a knowledge graph about Chinese-medicine/disease and used it in QA system.<br><strong>[Keras Tensorflow Named-Entity-Recognition Text-classify]</strong></li>
+<li>Constructed and maintained a knowledge graph about Chinese-medicine/disease and used it in QA system.<br><strong>[Keras Tensorflow Named-Entity-Recognition Text-Classify]</strong></li>
 </ul>
 
 <h2>Intern, Yiwise.ai</h2>
@@ -87,7 +87,7 @@ I have also done some work in my internship at Dept. of Algorithm,
 <li>Designed and implemented an application running on Android smart watch to move furniture using hand gestures. It collected data from gyroscope and accelerometer and used complementary filter to determine the direction of hand and used neural network to distinguish orders.<br><strong>[Android Raspberry]</strong></li>
 </ul>
 
-<h2>To see more project, please visit my <a href="https://github.com/heard1">github</a>. </h2>
+<h2>To see more projects, please visit my <a href="https://github.com/heard1">github</a>. </h2>
 
 </main>
 
