--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Sicong Li</title>
+</script>
 	<meta name="description" content="Sicong Li personal website">
 
 	<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
@@ -74,19 +74,22 @@ I have also done some work in my internship at Dept. of Algorithm,
 <li>Built <a href="http://zcy.ckcest.cn/tcm/qaos/home">website</a> about traditional Chinese medicine, which includes question answering system about medical treatment and exhibition of relationship between medicine and disease. <br><strong>[Spring MyBatis MySQL Echarts]</strong></li>
 <li>Constructed and maintained a knowledge graph about Chinese-medicine/disease and used it in QA system.<br><strong>[Keras Tensorflow Named-Entity-Recognition Text-Classify]</strong></li>
 </ul>
-
+<img src="./resource/img1.png" width="720" height="720" />
+<img src="./resource/img2.png" width="720" height="720" /> 
+<br><br>
 <h2>Intern, Yiwise.ai</h2>
 <ul>
-<li>Studied most recent papers, did some analysis and implemented some of the models</li>
-<li>Made classifier to distinguish sentence intents using neural network like BERT, DCNN, TextCNN</li>
-<li>built crawlers to download enterprise-level information from Zhihu, Baidu, etc.</li>
+<li>Studied most recent papers, did some analysis and implemented some of the models.</li>
+<li>Made <a href="https://github.com/heard1/aicai">classifier</a> to distinguish sentence intents using neural network like BERT, DCNN, TextCNN</li>
+<li>built <a href="https://github.com/heard1/ZhihuJinhua">crawlers</a> to download enterprise-level information from Zhihu, Baidu, etc.</li>
 </ul>
 
 <h2>Research Assistant, EMNets Lab</h2>
 <ul>
 <li>Designed and implemented an application running on Android smart watch to move furniture using hand gestures. It collected data from gyroscope and accelerometer and used complementary filter to determine the direction of hand and used neural network to distinguish orders.<br><strong>[Android Raspberry]</strong></li>
 </ul>
-
+<img src="./resource/img3.jpeg" width="720" height="720" />
+<img src="./resource/img4.jpeg" width="720" height="720" /> <br><br>
 <h2>To see more projects, please visit my <a href="https://github.com/heard1">github</a>. </h2>
 
 </main>
