--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@ var _hmt = _hmt || [];
 <h2 id="about-me">About Me</h2>
 
 <p>I am an undergraduate majored in Software Engineering.
-I will receive my Bachelor Degree from Dept. of Computer Science and Technology, <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> in 06/2020.
-I am a research assistant of <a href="http://www.dcd.zju.edu.cn/">Digital media Computing & Design Lab</a> in Zhejiang University,
+I will receive my Bachelor Degree from Dept. of Computer Science and Technology, <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> in 06/2020. Currently, I am working in <a href="https://bytedance.com/">Bytedance</a> as an Android developer. I was a research assistant of <a href="http://www.dcd.zju.edu.cn/">Digital media Computing & Design Lab</a> in Zhejiang University,
 advised by Prof. <a href="https://person.zju.edu.cn/yinzhang">Yin Zhang</a>.
 I have also done some work in my internship at Dept. of Algorithm,
 <a href="https://www.yiwise.com/">Yiwise.ai</a> (2019) and <a href="http://eagle.zju.edu.cn/researchfield-2/">Embedded and Networked Systems research group</a>, Zhejiang University (2018).</p>
 
-<p>I have great enthusiasm in engineering projects using Java, and my research interests lie within deep learning for Natural Language Processing.
-</p>
-
-<p><strong>New:</strong> Actively seeking for internship in development. Feel free to contact me!</p>
+<p>Language: Java, Kotlin, Python, C++</p>
+<p>Database: MySQL, SQLite, Neo4J</p>
+<p>Framework: Spring SSM, Python Flask, Android</p>
+<p><strong>New:</strong> Actively seeking for internship in the USA. Feel free to contact me!</p>
 
 
 
@@ -106,7 +105,7 @@ I have also done some work in my internship at Dept. of Algorithm,
 				<b>Sicong Li</b><span style="font-family: STFangsong"> (李思聪)</span>
 			</div>
 			<div>
-				+86 13777887322
+				lisicong.97@bytedance.com
 			</div>
 		</div>
 	</div>
@@ -115,7 +114,8 @@ I have also done some work in my internship at Dept. of Algorithm,
 	<h4 class="widget__title">News</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
-				
+				<li class="widget__item"><b>[05/2020]</b> Joined Bytedance as an intern aimed in Android.
+</li>
 				<li class="widget__item"><b>[11/2019]</b> Started as an research assistant at DCD lab.
 </li>
 				
